--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: false
     properties:
       hibernate:
@@ -32,8 +32,11 @@ spring:
 application:
   security:
     jwt:
-      secret-key: asdasd
+      secret-key: yUr2-B0qZl2MRkFmZJ3P_QR5kCZbQyM1NR5zdfGX7ZY
       expiration: 8640000
   mailing:
     frontend:
       activation-url: http://localhost:4200/activate-account
+
+server:
+  port: 8088
